--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
     <div class="conatiner">
         <div class="header">
-            <div class="h1">I</div>
-            <div class="h1">G</div>
-            <div class="h1">N</div>
-            <div class="h1">I</div>
+            <div class="h1">E</div>
+            <div class="h1">C</div>
+            <div class="h1">H</div>
+            <div class="h1">O</div>
             <div class="h1">T</div>
-            <div class="h1">I</div>
+            <div class="h1">R</div>
             <div class="h1">A</div>
         </div>
 
